Re-add right padding to prevent scrollbars in iframe when embedding in evento portal #556

--- a/src/app/evaluate-absences/components/evaluate-absences-header/evaluate-absences-header.component.scss
+++ b/src/app/evaluate-absences/components/evaluate-absences-header/evaluate-absences-header.component.scss
@@ -4,6 +4,6 @@
 :host {
   display: flex;
   flex-direction: column;
-  padding: $spacer 0;
+  padding: $spacer $spacer $spacer 0;
   border-bottom: 1px solid $border-color;
 }
